test/FAIL/stepcmd/to_many_arguments/02_test_step.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="to many arguments"
#-------

laod boucle.o
step into +
